--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ body{
     font-weight: 500;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-top: 10px;       
 }
 #section1-box-part3 label{
