--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body{
 }
 #home{
     /* background-color: rgb(106, 104, 104); */
-    padding: 12px 16.5px;
+    padding: 12px 16px;
 }
 #home:hover{
     background-color: rgb(106, 104, 104);
@@ -487,9 +487,6 @@ body{
     font-family: "Tinos Bold";
     overflow: hidden;
 }
-#section4-part1 h2{
-    /* font-size: 25px; */
-}
 #section4-part1 span{
     color: maroon;
 }
@@ -536,8 +533,8 @@ body{
 }
 #menu-area{
     font-family: "Poppins Medium";
-    margin-top: 83px;
-    font-size: 15px;
+    margin-top: 60px;
+    font-size: 14px;
     color: rgba(128, 128, 128, 0.323);
     display: flex;
     justify-content: center;
@@ -992,15 +989,17 @@ body{
     }
     #headerPara-p1 {
         font-family: "Poppins Bold";
-        font-size: 16px;
+        font-size: 14px;
         max-width: 197px;
+        height: 35px;
+        margin-bottom: -5px;
     }
     .headerPara h1{
-        font-size: 29px;
+        font-size: 28px;
         margin-top: 0;
     }
     #headerPara-p2 {
-        font-size: 11.5px;
+        font-size: 11.2px;
         margin-top: -20px;
     }
     .bar{
@@ -1313,16 +1312,9 @@ body{
         font-size: 17px;
         max-width: none;
     }
-    #section2-part1-paras-p {
-        /* max-width: 250px; */
-    }
     #section2-part1-paras-img{
         margin-left: 0;
         width: 190px;
-    }
-    #section2-part1-paras-img img {
-        /* height: 186px; */
-        /* width: 149px; */
     }
     #click {
         font-size: 21px;
